# heatshrink

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_random.rs  encode_decode.rs
src/: decoder.rs  encoder.rs  lib.rs
